fix(ios-100vh): attempt to fix 100vh problem on mobile

--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -1,8 +1,7 @@
 .container {
-  height: -webkit-fill-content;
   grid-template-rows: auto 1fr auto;
-  @apply grid h-screen bg-primary-gray px-5 py-5 duration-200 w-min flex-shrink-0
-    absolute -left-full top-0 sm:relative sm:-left-5 sm:-top-10;
+  @apply grid bg-primary-gray px-5 py-5 duration-200 w-full flex-shrink-0
+    absolute -left-full top-0 sm:relative sm:-left-5 sm:-top-10 sm:w-max;
 }
 
 .container_show_mobile {
