--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,22 +16,10 @@ button {
 .nav-button {
   @apply text-gray-300 hover:bg-bg-gray hover:text-white focus:outline-none duration-200;
 }
-/* font-family: 'Raleway', sans-serif;
-font-family: 'Ubuntu', sans-serif; */
 
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.full-height {
+  height: calc(100vh - 112px);
+  @screen sm {
+    @apply h-screen;
+  }
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-} */
